--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -6,7 +6,7 @@
                 target="_blank"
                 rel="noreferrer noopener"
                 title="Twitter">
-                    <svg class="footer__social__icon" width="16" height="16">
+                    <svg class="footer__social-icon" width="16" height="16">
                         <use href="./images/footer/footer-sprite.svg#icon-twitter">
                         </use>
                     </svg>
@@ -17,7 +17,7 @@
                 target="_blank"
                 rel="noreferrer noopener"
                 title="Instagram">
-                    <svg class="footer__social__icon" width="16" height="16">
+                    <svg class="footer__social-icon" width="16" height="16">
                         <use href="./images/footer/footer-sprite.svg#icon-instagram">
                         </use>
                     </svg>
@@ -28,7 +28,7 @@
                 target="_blank"
                 rel="noreferrer noopener"
                 title="Facebook">
-                    <svg class="footer__social__icon" width="16" height="16">
+                    <svg class="footer__social-icon" width="16" height="16">
                         <use href="./images/footer/footer-sprite.svg#icon-facebook">
                         </use>
                     </svg>
