--- a/src/sass/layout/_contact.scss
+++ b/src/sass/layout/_contact.scss
@@ -43,11 +43,11 @@
     margin-top: 20px;
 
     @media screen and(min-width: 768px) {
-        margin-bottom: 16px;
+        margin-top: 16px;
     }
 
     @media screen and(min-width: 1280px) {
-        margin-bottom: 15px;
+        margin-top: 15px;
     }
 }
 
