--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -98,7 +98,7 @@
       </ul>
 
       <ul class="list donut-group">
-        <li class="donut-group__item donut-1">
+        <li class="donut-group__item donut-group__item--1">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -128,7 +128,7 @@
             />
 
             <img
-              class="donut-group__img"
+              class="donut-group__img donut-group__img--1"
               src="./images/header/donut/mob/png/1-mob.png "
               alt="logo"
               width="64"
@@ -136,7 +136,7 @@
             />
           </picture>
         </li>
-        <li class="donut-group__item donut-2">
+        <li class="donut-group__item donut-group__item--2">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -166,7 +166,7 @@
             />
 
             <img
-              class="donut-group__img"
+              class="donut-group__img donut-group__img--2"
               src="./images/header/donut/mob/png/2-mob.png "
               alt="logo"
               width="35"
@@ -174,7 +174,7 @@
             />
           </picture>
         </li>
-        <li class="donut-group__item donut-3">
+        <li class="donut-group__item donut-group__item--3">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -204,7 +204,7 @@
             />
 
             <img
-              class="donut-group__img"
+              class="donut-group__img donut-group__img--3"
               src="./images/header/donut/mob/png/3-mob.png "
               alt="logo"
               width="68"
@@ -212,7 +212,7 @@
             />
           </picture>
         </li>
-        <li class="donut-group__item donut-4">
+        <li class="donut-group__item donut-group__item--4">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -242,7 +242,7 @@
             />
 
             <img
-              class="donut-group__img"
+              class="donut-group__img donut-group__img--4"
               src="./images/header/donut/mob/png/4-mob.png "
               alt="logo"
               width="44"
@@ -250,7 +250,7 @@
             />
           </picture>
         </li>
-        <li class="donut-group__item donut-5">
+        <li class="donut-group__item donut-group__item--5">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -280,7 +280,7 @@
             />
 
             <img
-              class="donut-group__img"
+              class="donut-group__img donut-group__img--5"
               src="./images/header/donut/mob/png/5-mob.png "
               alt="logo"
               width="35"
@@ -288,7 +288,7 @@
             />
           </picture>
         </li>
-        <li class="donut-group__item donut-6">
+        <li class="donut-group__item donut-group__item--6">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -318,7 +318,7 @@
             />
 
             <img
-              class="donut-group__img"
+              class="donut-group__img donut-group__img--6"
               src="./images/header/donut/mob/png/6-mob.png "
               alt="logo"
               width="29"
@@ -326,7 +326,7 @@
             />
           </picture>
         </li>
-        <li class="donut-group__item donut-7">
+        <li class="donut-group__item donut-group__item--7">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -356,7 +356,7 @@
             />
 
             <img
-              class="donut-group__img"
+              class="donut-group__img donut-group__img--7"
               src="./images/header/donut/mob/png/7-mob.png "
               alt="logo"
               width="59"
@@ -364,7 +364,7 @@
             />
           </picture>
         </li>
-        <li class="donut-group__item donut-8">
+        <li class="donut-group__item donut-group__item--8">
           <picture>
             <source
               media="(min-width: 1280px)"
@@ -394,7 +394,7 @@
             />
 
             <img
-              class="donut-group__img"
+              class="donut-group__img donut-group__img--8"
               src="./images/header/donut/mob/png/8-mob.png "
               alt="logo"
               width="29"
