--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,7 +1,7 @@
 <header class="header-hero">
-  <div class="container">
+  <div class="container header-hero__container">
     <div class="header">
-      <a class="link" href="./index.html">
+      <a class="link logo" href="./index.html">
         <picture>
           <source
             media="(min-width: 1280px)"
@@ -32,7 +32,7 @@
 
           <img
             src="./images/header/logo/logo-mob.png"
-            alt="logo"
+            alt="logo__pic"
             width="96"
             height="44"
           />
