--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -2,7 +2,7 @@
   <h1 class="reviews__title">Rewiews</h1>
   <ul class="reviews__list">
     <li class="reviews__item reviews__item--john">
-      <picture>
+      <picture class="reviews__img">
         <!-- Набір зображень для десктопних екранів -->
         <source
           media="(min-width: 1280px)"
@@ -10,7 +10,7 @@
             ./images/reviews/desk/png/john@1x-desktop.png 1x,
             ./images/reviews/desk/png/john@2x-desktop.png 2x
           "
-          type="image/webp"
+          type="image/png"
         />
         <!-- Набір зображень для планшетних екранів -->
         <source
@@ -23,10 +23,9 @@
             ./images/reviews/tab/png/john@1x-tablet.png 1x,
             ./images/reviews/tab/png/john@2x-tablet.png 2x
           "
-          type="image/webp"
+          type="image/png"
         />
         <img
-          class="reviews__img"
           src="./images/reviews/desk/png/john@1x-desktop.png"
           alt="John photo"
         />
@@ -52,7 +51,7 @@
     </li>
 
     <li class="reviews__item reviews__item--will">
-      <picture>
+      <picture class="reviews__img">
         <!-- Набір зображень для десктопних екранів -->
         <source
           media="(min-width: 1280px)"
@@ -60,7 +59,7 @@
             ./images/reviews/desk/png/will@1x-desktop.png 1x,
             ./images/reviews/desk/png/will@2x-desktop.png 2x
           "
-          type="image/webp"
+          type="image/png"
         />
         <!-- Набір зображень для планшетних екранів -->
         <source
@@ -73,7 +72,7 @@
             ./images/reviews/tab/png/will@1x-tablet.png 1x,
             ./images/reviews/tab/png/will@2x-tablet.png 2x
           "
-          type="image/webp"
+          type="image/png"
         />
         <!-- Набір зображень для мобільних екранів -->
         <source
@@ -82,11 +81,10 @@
             ./images/reviews/mob/png/will@1x-mobil.png 1x,
             ./images/reviews/mob/png/will@2x-mobil.png 2x
           "
-          type="image/webp"
+          type="image/png"
         />
 
         <img
-          class="reviews__img"
           src="./images/reviews/desk/png/will@1x-desktop.png"
           alt="Will photo"
         />
@@ -112,7 +110,7 @@
     </li>
 
     <li class="reviews__item reviews__item--elisabeth">
-      <picture>
+      <picture class="reviews__img">
         <!-- Набір зображень для десктопних екранів -->
         <source
           media="(min-width: 1280px)"
@@ -120,7 +118,7 @@
             ./images/reviews/desk/png/elisabeth@1x-desktop.png 1x,
             ./images/reviews/desk/png/elisabeth@2x-desktop.png 2x
           "
-          type="image/webp"
+          type="image/png"
         />
         <!-- Набір зображень для планшетних екранів -->
         <source
@@ -133,12 +131,11 @@
             ./images/reviews/tab/png/elisabeth@1x-tablet.png 1x,
             ./images/reviews/tab/png/elisabeth@2x-tablet.png 2x
           "
-          type="image/webp"
+          type="image/png"
         />
         <img
-          class="reviews__img"
           src="./images/reviews/desk/png/elisabeth@1x-desktop.png"
-          alt="Will photo"
+          alt="Elisabeth photo"
         />
       </picture>
       <div class="reviews__star">
