--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -46,7 +46,7 @@
           <a class="link" href="">Program</a>
         </li>
         <li>
-          <a class="link" href="">Reviews</a>
+          <a class="link" href="#reviews">Reviews</a>
         </li>
         <li>
           <a class="link" href="">Contacts</a>
