--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews">
+<section class="reviews" id="reviews">
   <h1 class="reviews__title">Rewiews</h1>
   <ul class="reviews__list">
     <li class="reviews__item reviews__item--john">
