исправил Бем в соц

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -73,7 +73,7 @@
 
       <ul class="list socials hero__socials">
         <li class="socials__item">
-          <a class="link socials-link" href="">
+          <a class="link socials__link" href="">
             <svg width="16" height="16">
               <use href="./images/sprite.svg#tvitter-icon"></use>
             </svg>
@@ -81,7 +81,7 @@
         </li>
 
         <li class="socials__item">
-          <a class="link socials-link" href="">
+          <a class="link socials__link" href="">
             <svg width="16" height="16">
               <use href="./images/sprite.svg#inst-icon"></use>
             </svg>
