--- a/src/sass/layout/_contact.scss
+++ b/src/sass/layout/_contact.scss
@@ -1,130 +1,130 @@
 .contact {
-    background-color: #fff;
-    padding-top: 16px;
-    padding-bottom: 16px;
+  padding-top: 16px;
+  padding-bottom: 16px;
 }
 
 .contact__title {
-    margin-bottom: 16px;
-    text-align: center;
-    color: #2E2520;
-    font-family: 'Caveat brush', cursive;
-    font-size: 24px;
+  margin-bottom: 16px;
+  text-align: center;
+  color: #2e2520;
+  font-family: 'Caveat brush', cursive;
+  font-size: 24px;
+  line-height: 1.25;
+
+  @media screen and(min-width: 768px) {
+    margin-bottom: 20px;
+  }
+
+  @media screen and(min-width: 1280px) {
+    font-size: 36px;
     line-height: 1.25;
-
-    @media screen and(min-width: 768px) {
-        margin-bottom: 20px;
-    }
-
-    @media screen and(min-width: 1280px) {
-        font-size: 36px;
-        line-height: 1.25;
-    }
+  }
 }
 
 .contact__description {
-    margin-bottom: 16px;
-    text-align: center;
-    color: #2E2520;
-    font-size: 16px;
-    line-height: 1.25;
+  margin-bottom: 16px;
+  text-align: center;
+  color: #2e2520;
+  font-size: 16px;
+  line-height: 1.25;
 
-    @media screen and(min-width: 1280px) {
-        font-size: 18px;
-        line-height: 1.22;
-    }
+  @media screen and(min-width: 1280px) {
+    font-size: 18px;
+    line-height: 1.22;
+  }
 }
 
 .contact__label {
-    display: block;
+  display: block;
 }
 
 .contact__label + .contact__label {
-    margin-top: 20px;
+  margin-top: 20px;
 
-    @media screen and(min-width: 768px) {
-        margin-top: 16px;
-    }
+  @media screen and(min-width: 768px) {
+    margin-top: 16px;
+  }
 
-    @media screen and(min-width: 1280px) {
-        margin-top: 15px;
-    }
+  @media screen and(min-width: 1280px) {
+    margin-top: 15px;
+  }
 }
 
 .contact__input {
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    width: 100%;
-    max-width: 280px;
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  width: 100%;
+  max-width: 280px;
 
-    border-top: 0px solid transparent;
-    border-right: 0px solid transparent;
-    border-bottom: 1px solid #AB816C;
-    border-left: 0px solid transparent;
+  border-top: 0px solid transparent;
+  border-right: 0px solid transparent;
+  border-bottom: 1px solid #ab816c;
+  border-left: 0px solid transparent;
 
-    outline: none;
+  outline: none;
 
-    @include animation(border-bottom);
+  @include animation(border-bottom);
 
-    &:hover, &:focus {
-        border-bottom: 1px solid #2E2520;
-    }
+  &:hover,
+  &:focus {
+    border-bottom: 1px solid #2e2520;
+  }
 
-    @media screen and (min-width: 768px) {
-        max-width: 336px;
-    }
+  @media screen and (min-width: 768px) {
+    max-width: 336px;
+  }
 
-    @media screen and (min-width: 1280px) {
-        max-width: 394px;
-    }
+  @media screen and (min-width: 1280px) {
+    max-width: 394px;
+  }
 }
 
 .contact__input::placeholder {
-    color: rgba(171, 129, 108, 0.5);
-    font-size: 16px;
-    line-height: 1.25;
+  color: rgba(171, 129, 108, 0.5);
+  font-size: 16px;
+  line-height: 1.25;
 }
 
 .contact__input:invalid {
-    border-top: 0px solid transparent;
-    border-right: 0px solid transparent;
-    border-bottom: 1px solid #ff0000;
-    border-left: 0px solid transparent;
+  border-top: 0px solid transparent;
+  border-right: 0px solid transparent;
+  border-bottom: 1px solid #ff0000;
+  border-left: 0px solid transparent;
 }
 
 .contact__button {
-    display: block;
-    text-align: center;
+  display: block;
+  text-align: center;
 
-    margin-top: 32px;
-    margin-right: auto;
-    margin-left: auto;
-    padding: 8px 57px;
-    
-    border-radius: 25px;
+  margin-top: 32px;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 8px 57px;
 
-    font-family: 'Caveat brush', cursive;
-    font-size: 18px;
-    line-height: 1.28;
+  border-radius: 25px;
 
-    background-color: #AB816C;
-    color: #ffffff;
-    filter: drop-shadow(0px 0px 0px rgba(0, 0, 0, 0.25));
+  font-family: 'Caveat brush', cursive;
+  font-size: 18px;
+  line-height: 1.28;
 
-    @include animation(color);
-    @include animation(filter);
+  background-color: #ab816c;
+  color: #ffffff;
+  filter: drop-shadow(0px 0px 0px rgba(0, 0, 0, 0.25));
 
-    &:hover,
-    &:focus {
-        color: #000000;
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    }
+  @include animation(color);
+  @include animation(filter);
 
-    @media screen and(min-width: 1280px) {
-        padding: 8px 67px;
+  &:hover,
+  &:focus {
+    color: #000000;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  }
 
-        font-size: 24px;
-        line-height: 1.25;
-    }
+  @media screen and(min-width: 1280px) {
+    padding: 8px 67px;
+
+    font-size: 24px;
+    line-height: 1.25;
+  }
 }
