--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -115,9 +115,14 @@
     .reviews__item--active {
       margin-top: 143px;
     }
-
+    &__name {
+      font-size: 16px;
+    }
     &__text {
-      margin-top: 20px;
+      font-size: 18px;
+    }
+    &__counter {
+      font-size: 16px;
     }
   }
 }
