доделал анимацию героя

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -74,7 +74,7 @@
       <ul class="list socials hero__socials">
         <li class="socials__item">
           <a class="link socials__link" href="">
-            <svg width="16" height="16">
+            <svg class="socials__icon" width="16" height="16">
               <use href="./images/sprite.svg#tvitter-icon"></use>
             </svg>
           </a>
@@ -82,7 +82,7 @@
 
         <li class="socials__item">
           <a class="link socials__link" href="">
-            <svg width="16" height="16">
+            <svg class="socials__icon" width="16" height="16">
               <use href="./images/sprite.svg#inst-icon"></use>
             </svg>
           </a>
@@ -90,13 +90,14 @@
 
         <li class="socials__item">
           <a class="link socials__link" href="">
-            <svg width="16" height="16">
+            <svg class="socials__icon" width="16" height="16">
               <use href="./images/sprite.svg#fb-icon"></use>
             </svg>
           </a>
         </li>
       </ul>
 
+      <!-- ПОНЧИКИ -->
       <ul class="list donut-group">
         <li class="donut-group__item donut-group__item--1">
           <picture>
