--- a/src/sass/layout/_program.scss
+++ b/src/sass/layout/_program.scss
@@ -38,6 +38,10 @@
         background-color: inherit;
         border:none; 
         color: #AB816C;
+        &:hover + .read_more,
+        .read_more:hover {
+            max-height: 500px;
+        }
             @media screen and(min-width: 1280px) {
                 display:none;
             }
@@ -205,16 +209,20 @@
 }
 .article {
     overflow: hidden;
-    margin-bottom: 16px; 
+    margin-bottom: 16px;
+    // max-height: auto;
+    // transition-property:transform ;
+    //   max-height: auto;
 }
 .read_more {
+    transition: max-height .5s;
     @media screen and(min-width: 320px) {
-        height: 376px;
+        max-height: 376px;
     }
     @media screen and(min-width: 768px) {
-        height: 276px;
+        max-height: 276px;
     }
     @media screen and(min-width: 1280px) {
-        height: auto;
-    }
+        max-height: auto;
+    } 
 }
